# cmaketest

./: CMakeLists.txt
src/: tutorial.c
src/MathFunctions/: CMakeLists.txt  MathFunctions.c  MathFunctions.h  mysqrt.c
